--- a/ziskos-hints/Cargo.toml
+++ b/ziskos-hints/Cargo.toml
@@ -33,6 +33,9 @@ serde = { workspace = true, features = ["derive"] }
 bincode = "2.0"
 paste = "1.0"
 
+elliptic-curve = "0.13.8"
+k256 = "0.13.4"
+
 [features]
 default = ["hints"]
 hints = []
