--- a/Cargo.toml
+++ b/Cargo.toml
@@ -162,6 +162,7 @@ futures-util = "0.3"
 uuid = { version = "1.0", features = ["serde", "v4"] }
 chrono = { version = "0.4", features = ["serde"] }
 sha2 = { version = "0.10.9", features = ["compress"] }
+paste = "1.0"
 
 # gRPC dependencies
 tonic = "0.14"
