--- a/precompiles/dma/Cargo.toml
+++ b/precompiles/dma/Cargo.toml
@@ -12,6 +12,7 @@ zisk-core = { workspace = true }
 zisk-common = { workspace = true }
 zisk-pil = { workspace = true }
 precompiles-common = { workspace = true }
+precompiles-helpers = { workspace = true }
 sm-mem = { workspace = true }
 mem-common = { workspace = true }
 lib-c = { workspace = true }
@@ -29,6 +30,7 @@ generic-array = "0.14"
 [features]
 default = []
 dma_memcmp = []
+debug_dma = []
 packed = []
 no_lib_link = ["proofman-common/no_lib_link"]
 diagnostic = ["proofman-macros/diagnostic", "proofman/diagnostic"]
