--- a/precompiles/hints/Cargo.toml
+++ b/precompiles/hints/Cargo.toml
@@ -11,6 +11,14 @@ categories = { workspace = true }
 name = "precompiles_hints"
 path = "src/lib.rs"
 
+[[bin]]
+name = "hints-socket-server"
+path = "src/bin/hints_socket_server.rs"
+
+[[bin]]
+name = "hints-quic-server"
+path = "src/bin/hints_quic_server.rs"
+
 [dependencies]
 ziskos-hints = { workspace = true }
 lib-c = { workspace = true }
@@ -19,10 +27,7 @@ anyhow = { workspace = true }
 rayon = { workspace = true }
 tracing = { workspace = true }
 zisk-common = { workspace = true }
-
-[[bin]]
-name = "hints-socket-server"
-path = "src/bin/hints_socket_server.rs"
+rustls = { version = "0.23", features = ["ring"] }
 
 [dev-dependencies]
 criterion = "0.8"
