--- a/precompiles/dma/Cargo.toml
+++ b/precompiles/dma/Cargo.toml
@@ -31,7 +31,8 @@ generic-array = "0.14"
 default = []
 dma_memcmp = []
 debug_dma = []
-packed = []
+gpu = ["proofman-common/gpu", "packed"]
+packed = ["proofman-common/packed"]
 no_lib_link = ["proofman-common/no_lib_link"]
 diagnostic = ["proofman-macros/diagnostic", "proofman/diagnostic"]
 disable_distributed = ["proofman/disable_distributed", "proofman-common/disable_distributed"]
