--- a/ziskos-hints/Cargo.toml
+++ b/ziskos-hints/Cargo.toml
@@ -32,6 +32,7 @@ tiny-keccak = { version = "2.0.0", features = ["keccak"] }
 serde = { workspace = true, features = ["derive"] }
 bincode = "2.0"
 paste = "1.0"
+sha2 = { workspace = true }
 
 # zisk-os specific dependencies
 elliptic-curve = "0.13.8"
