--- a/executor/Cargo.toml
+++ b/executor/Cargo.toml
@@ -31,6 +31,7 @@ rayon = { workspace = true }
 pil-std-lib = { workspace = true }
 crossbeam = "0.8.4"
 
+precompiles-common = { workspace = true }
 precomp-keccakf = { workspace = true }
 precomp-sha256f = { workspace = true }
 precomp-poseidon2 = { workspace = true }
