--- a/precompiles/common/Cargo.toml
+++ b/precompiles/common/Cargo.toml
@@ -10,5 +10,7 @@ categories = { workspace = true }
 [dependencies]
 zisk-core = { workspace = true }
 zisk-common = { workspace = true }
+sm-mem = { workspace = true }
+mem-common = { workspace = true }
 
 fields = { workspace = true }
