--- a/verifier/Cargo.toml
+++ b/verifier/Cargo.toml
@@ -9,6 +9,7 @@ categories = { workspace = true }
 
 [dependencies]
 proofman-verifier = { workspace = true, features = ["verify"] }
+proofman-util = { workspace = true }
 anyhow = { workspace = true }
 
 [features]
