--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -15,6 +15,7 @@ zisk-pil = { workspace = true }
 
 witness = { workspace = true }
 proofman-common = { workspace = true }
+proofman-util = { workspace = true }
 proofman = { workspace = true }
 fields = { workspace = true }
 tracing = { workspace = true }
@@ -23,7 +24,6 @@ serde = { workspace = true }
 serde_json = { workspace = true }
 anyhow = { workspace = true }
 thiserror = { workspace = true }
-bytemuck = { workspace = true }
 zstd = { workspace = true }
 libc = "0.2"
 
