--- a/distributed/crates/common/Cargo.toml
+++ b/distributed/crates/common/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 proofman = { workspace = true }
 proofman-common = { workspace = true }
+proofman-util = { workspace = true }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
 tracing-appender = { workspace = true }
