--- a/rom-setup/Cargo.toml
+++ b/rom-setup/Cargo.toml
@@ -11,13 +11,13 @@ categories = { workspace = true }
 sm-rom = { workspace = true }
 zisk-core = { workspace = true }
 zisk-pil = { workspace = true }
+zisk-common = { workspace = true }
 
 tracing = { workspace = true }
 fields = { workspace = true }
 proofman-common = { workspace = true }
 colored = { workspace = true }
 anyhow = { workspace = true }
-bytemuck = { workspace = true }
 blake3 = "1.3.1"
 
 [features]
