--- a/sdk/Cargo.toml
+++ b/sdk/Cargo.toml
@@ -29,7 +29,8 @@ serde = { workspace = true }
 
 [features]
 default = []
-gpu = []
+gpu = ["proofman-common/gpu", "packed"]
+packed = ["proofman-common/packed"]
 stats = []
 disable_distributed = ["proofman/disable_distributed", "proofman-common/disable_distributed"]
 
