--- a/examples/sha-hasher/host/Cargo.toml
+++ b/examples/sha-hasher/host/Cargo.toml
@@ -33,3 +33,7 @@ path = "bin/plonk.rs"
 [[bin]]
 name = "compressed"
 path = "bin/compressed.rs"
+
+[[bin]]
+name = "verify-constraints"
+path = "bin/verify-constraints.rs"
