Feature/ziskemu example (#772)
* Example ziskemu

* Fix

* Fix 2

* Fix command

* Fix run command

* Fix sha hasher

--- a/examples/sha-hasher/host/Cargo.toml
+++ b/examples/sha-hasher/host/Cargo.toml
@@ -38,3 +38,7 @@ path = "bin/compressed.rs"
 [[bin]]
 name = "verify-constraints"
 path = "bin/verify-constraints.rs"
+
+[[bin]]
+name = "ziskemu"
+path = "bin/ziskemu.rs"
