--- a/emulator/Cargo.toml
+++ b/emulator/Cargo.toml
@@ -53,7 +53,7 @@ default = []
 debug_stats_trace = []
 minimal_trace_index_debug = []
 debug_call_stack = []
-gpu = ["proofman-common/gpu", "packed"]
-packed = ["proofman-common/packed"]
+gpu = ["packed"]
+packed = []
 # sp = []
 no_lib_link = ["zisk-pil/no_lib_link"]
