--- a/state-machines/frequent-ops/Cargo.toml
+++ b/state-machines/frequent-ops/Cargo.toml
@@ -17,7 +17,6 @@ zisk-common = { workspace = true }
 zisk-pil = { workspace = true }
 
 fields = { workspace=true }
-proofman = { workspace = true }
 proofman-common = { workspace = true }
 proofman-macros = { workspace = true }
 proofman-util = { workspace = true }
@@ -31,7 +30,6 @@ static_assertions = { workspace = true }
 
 [features]
 default = []
-diagnostic = ["proofman-macros/diagnostic", "proofman/diagnostic"]
+gpu = ["packed"]
+packed = []
 generate_code_arith_range_table = []
-no_lib_link = ["proofman-common/no_lib_link"]
-disable_distributed = ["proofman/disable_distributed", "proofman-common/disable_distributed"]
