--- a/precompiles/arith_eq_384/Cargo.toml
+++ b/precompiles/arith_eq_384/Cargo.toml
@@ -30,7 +30,6 @@ precomp-arith-eq = { workspace = true }
 zisk-common = { workspace = true }
 lib-c = { workspace = true }
 
-proofman = { workspace = true }
 proofman-common = { workspace = true }
 proofman-macros = { workspace = true }
 proofman-util = { workspace = true }
@@ -61,8 +60,6 @@ nom = "7"
 
 [features]
 default = []
-gpu = ["proofman-common/gpu", "packed"]
-packed = ["proofman-common/packed"]
-diagnostic = ["proofman-macros/diagnostic", "proofman/diagnostic"]
-no_lib_link = ["proofman-common/no_lib_link"]
+gpu = ["packed"]
+packed = []
 test_data = []
