--- a/precompiles/big_int/Cargo.toml
+++ b/precompiles/big_int/Cargo.toml
@@ -16,7 +16,6 @@ sm-mem = { workspace = true }
 mem-common = { workspace = true }
 lib-c = { workspace = true }
 
-proofman = { workspace = true }
 proofman-common = { workspace = true }
 proofman-macros = { workspace = true }
 proofman-util = { workspace = true }
@@ -28,8 +27,5 @@ generic-array = "0.14"
 
 [features]
 default = []
-gpu = ["proofman-common/gpu", "packed"]
-packed = ["proofman-common/packed"]
-no_lib_link = ["proofman-common/no_lib_link"]
-diagnostic = ["proofman-macros/diagnostic", "proofman/diagnostic"]
-disable_distributed = ["proofman/disable_distributed", "proofman-common/disable_distributed"]
+gpu = ["packed"]
+packed = []
