--- a/precompiles/dma/Cargo.toml
+++ b/precompiles/dma/Cargo.toml
@@ -17,7 +17,6 @@ sm-mem = { workspace = true }
 mem-common = { workspace = true }
 lib-c = { workspace = true }
 
-proofman = { workspace = true }
 proofman-common = { workspace = true }
 proofman-macros = { workspace = true }
 proofman-util = { workspace = true }
@@ -31,8 +30,5 @@ generic-array = "0.14"
 default = []
 dma_memcmp = []
 debug_dma = []
-gpu = ["proofman-common/gpu", "packed"]
-packed = ["proofman-common/packed"]
-no_lib_link = ["proofman-common/no_lib_link"]
-diagnostic = ["proofman-macros/diagnostic", "proofman/diagnostic"]
-disable_distributed = ["proofman/disable_distributed", "proofman-common/disable_distributed"]
+gpu = ["packed"]
+packed = []
