--- a/precompiles/sha256f/Cargo.toml
+++ b/precompiles/sha256f/Cargo.toml
@@ -15,7 +15,6 @@ precompiles-common = { workspace = true }
 sm-mem = { workspace = true }
 mem-common = { workspace = true }
 
-proofman = { workspace = true }
 proofman-common = { workspace = true }
 proofman-macros = { workspace = true }
 proofman-util = { workspace = true }
@@ -26,8 +25,5 @@ rayon = { workspace = true }
 
 [features]
 default = []
-gpu = ["proofman-common/gpu", "packed"]
-packed = ["proofman-common/packed"]
-no_lib_link = ["proofman-common/no_lib_link"]
-diagnostic = ["proofman-macros/diagnostic", "proofman/diagnostic"]
-disable_distributed = ["proofman/disable_distributed", "proofman-common/disable_distributed"]
+gpu = ["packed"]
+packed = []
