--- a/state-machines/rom/Cargo.toml
+++ b/state-machines/rom/Cargo.toml
@@ -14,7 +14,6 @@ zisk-pil = { workspace = true }
 asm-runner = { workspace = true }
 
 fields = { workspace=true }
-proofman = { workspace = true }
 proofman-common = { workspace = true }
 proofman-macros = { workspace = true }
 proofman-util = { workspace = true }
@@ -25,6 +24,5 @@ itertools = { workspace = true }
 
 [features]
 default = []
-no_lib_link = ["proofman-common/no_lib_link"]
-diagnostic = ["proofman-macros/diagnostic", "proofman/diagnostic"]
-disable_distributed = ["proofman/disable_distributed", "proofman-common/disable_distributed"]
+gpu = ["packed"]
+packed = []
