--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,5 @@ state-machines/frequent-ops/src/frequent_ops_fixed.bin
 state-machines/arith/src/arith_frops_fixed.bin
 state-machines/binary/src/binary_basic_frops_fixed.bin
 state-machines/binary/src/binary_extension_frops_fixed.bin
+reth-inputs/
+hints/
