Refactor hint buffer and macros

--- a/.gitignore
+++ b/.gitignore
@@ -24,4 +24,4 @@ state-machines/arith/src/arith_frops_fixed.bin
 state-machines/binary/src/binary_basic_frops_fixed.bin
 state-machines/binary/src/binary_extension_frops_fixed.bin
 reth-inputs/
-hints/
+/hints
