--- a/sdk/Cargo.toml
+++ b/sdk/Cargo.toml
@@ -26,8 +26,8 @@ zisk-verifier = { workspace = true }
 zisk-build = { workspace = true }
 zisk-witness = { workspace = true }
 sha2 = { workspace = true }
-bincode = { workspace = true }
-serde = { workspace = true }
+bincode = { workspace = true, features = ["std"] }
+serde = { workspace = true, features = ["std"] }
 
 [features]
 default = []
