--- a/distributed/crates/grpc-api/Cargo.toml
+++ b/distributed/crates/grpc-api/Cargo.toml
@@ -14,7 +14,7 @@ tonic-prost = { workspace = true }
 tracing = { workspace = true }
 uuid = { workspace = true }
 chrono = { workspace = true }
-serde = { workspace = true }
+serde = { workspace = true, features = ["std"] }
 serde_json = { workspace = true }
 prost = { workspace = true }
 prost-types = { workspace = true }
