--- a/ziskos-hints/Cargo.toml
+++ b/ziskos-hints/Cargo.toml
@@ -28,8 +28,8 @@ rand = "0.8.5"
 getrandom = { version = "0.2", features = ["custom"] }
 cfg-if = "1.0"
 tiny-keccak = { version = "2.0.0", features = ["keccak"] }
-serde = { workspace = true, features = ["derive"] }
-bincode = { workspace = true }
+serde = { workspace = true, features = ["derive", "std"] }
+bincode = { workspace = true, features = ["std"] }
 paste = "1.0"
 sha2 = { workspace = true }
 fields = { workspace = true }
@@ -39,6 +39,7 @@ anyhow = { workspace = true }
 [features]
 default = ["hints"]
 hints = []
+guest = []
 
 [lints.rust]
 unexpected_cfgs = { level = "warn", check-cfg = [
