--- a/ziskos/entrypoint/Cargo.toml
+++ b/ziskos/entrypoint/Cargo.toml
@@ -10,7 +10,6 @@ links = "ziskos"
 
 [features]
 default = ["user-hints", "host-deps"]
-guest = []
 host-deps = [
     "dep:precompiles-helpers",
     "dep:lib-c", "dep:num-bigint", "dep:num-integer", "dep:num-traits",
@@ -39,15 +38,15 @@ fields = { git = "https://github.com/0xPolygonHermez/pil2-proofman.git", branch 
     "verify",
 ], optional = true }
 
-[target.'cfg(all(not(feature = "guest"), any(zisk_hints, zisk_hints_debug)))'.dependencies]
+# Hints deps (optional, gated by user-hints feature)
+zisk-common = { path = "../../common", optional = true }
 bytes = { version = "1.11.0", optional = true }
 once_cell = { version = "1.21.3", optional = true }
 paste = { version = "1.0", optional = true }
-zisk-common = { path = "../../common", optional = true }
 anyhow = { workspace = true, optional = true }
-tokio = { workspace = true, optional = true}
+tokio = { workspace = true, optional = true }
 
-[target.'cfg(all(not(feature = "guest"), zisk_hints_metrics))'.dependencies]
+# Metrics dep (optional)
 ctor = { version = "0.2", optional = true }
 
 [lints.rust]
