--- a/examples/sha-hasher/guest/Cargo.toml
+++ b/examples/sha-hasher/guest/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-byteorder = "1.5.0"
-sha2 = "0.10.8"
+byteorder = { version = "1.5.0", default-features = false }
+sha2 = { version = "0.10.8", default-features = false }
 serde = { version = "1.0", default-features = false, features = ["derive"] }
 ziskos = { path = "../../../ziskos/entrypoint" }
