--- a/ziskos/entrypoint/Cargo.toml
+++ b/ziskos/entrypoint/Cargo.toml
@@ -21,6 +21,11 @@ user-hints = ["dep:zisk-common", "dep:bytes", "dep:paste", "dep:once_cell", "dep
 [dependencies]
 cfg-if = "1.0"
 getrandom = { version = "0.2", features = ["custom"] }
+rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }
+serde = { workspace = true, default-features = false, features = ["derive", "alloc"] }
+bincode = { workspace = true, default-features = false, features = ["serde", "alloc"] }
+
+[target.'cfg(not(target_os = "none"))'.dependencies]
 precompiles-helpers = { workspace = true, optional = true }
 
 # Host-only dependencies (software implementations of fcalls, used by emulator)
@@ -29,10 +34,7 @@ num-bigint = { workspace = true, optional = true }
 num-integer = { workspace = true, optional = true }
 num-traits = { workspace = true, optional = true }
 lazy_static = { version = "1.5.0", optional = true }
-rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }
 tiny-keccak = { version = "2.0.0", features = ["keccak"], optional = true }
-serde = { workspace = true, default-features = false, features = ["derive", "alloc"] }
-bincode = { workspace = true, default-features = false, features = ["serde", "alloc"] }
 sha2 = { workspace = true, optional = true }
 fields = { git = "https://github.com/0xPolygonHermez/pil2-proofman.git", branch = "pre-develop-0.16.0", features = [
     "verify",
