--- a/ziskos/entrypoint/Cargo.toml
+++ b/ziskos/entrypoint/Cargo.toml
@@ -21,6 +21,7 @@ user-hints = ["dep:zisk-common", "dep:bytes", "dep:paste", "dep:once_cell", "dep
 [dependencies]
 cfg-if = "1.0"
 getrandom = { version = "0.2", features = ["custom"] }
+spin = "0.9"
 rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }
 serde = { workspace = true, default-features = false, features = ["derive", "alloc"] }
 bincode = { workspace = true, default-features = false, features = ["serde", "alloc"] }
