--- a/Cargo.toml
+++ b/Cargo.toml
@@ -159,7 +159,7 @@ static_assertions = "1"
 clap = { version = "4", features = ["derive", "env"] }
 futures = { version = "0.3" }
 thiserror = { version = "2" }
-bincode = "1.3.3"
+bincode = { version = "2.0", default-features = false, features = ["serde"] }
 
 tokio = { version = "1", features = ["full"] }
 tokio-stream = "0.1"
