--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -30,7 +30,7 @@ quinn = "0.11"
 rustls = { version = "0.23", features = ["ring"] }
 rcgen = "0.14"
 
-bincode = { workspace = true }
+bincode = { workspace = true, features = ["std"] }
 
 # Distributed mode (mpi) is only supported on Linux x86_64
 [target.'cfg(all(target_os = "linux", target_arch = "x86_64"))'.dependencies]
