--- a/ziskos-hints/Cargo.toml
+++ b/ziskos-hints/Cargo.toml
@@ -29,7 +29,7 @@ getrandom = { version = "0.2", features = ["custom"] }
 cfg-if = "1.0"
 tiny-keccak = { version = "2.0.0", features = ["keccak"] }
 serde = { workspace = true, features = ["derive"] }
-bincode = { workspace = true }
+bincode = { workspace = true, features = ["std"] }
 paste = "1.0"
 sha2 = { workspace = true }
 fields = { workspace = true }
