--- a/ziskos/entrypoint/Cargo.toml
+++ b/ziskos/entrypoint/Cargo.toml
@@ -17,7 +17,8 @@ num-traits = { workspace = true }
 precompiles-helpers = { workspace = true }
 
 lazy_static = "1.5.0"
-rand = "0.8.5"
+spin = "0.9"
+rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }
 getrandom = { version = "0.2", features = ["custom"] }
 cfg-if = "1.0"
 tiny-keccak = { version = "2.0.0", features = ["keccak"] }
