--- a/ziskos/entrypoint/Cargo.toml
+++ b/ziskos/entrypoint/Cargo.toml
@@ -30,20 +30,19 @@ fields = { git = "https://github.com/0xPolygonHermez/pil2-proofman.git", branch 
     "verify",
 ] }
 
-[target.'cfg(all(not(all(target_os = "zkvm", target_vendor = "zisk")), any(zisk_hints, zisk_hints_debug)))'.dependencies]
+# Host-only dependencies (activated by zisk_host feature)
 bytes = { version = "1.11.0", optional = true }
 once_cell = { version = "1.21.3", optional = true }
 paste = { version = "1.0", optional = true }
 zisk-common = { path = "../../common", optional = true }
 anyhow = { workspace = true, optional = true }
-tokio = { workspace = true, optional = true}
-
-[target.'cfg(all(not(all(target_os = "zkvm", target_vendor = "zisk")), zisk_hints_metrics))'.dependencies]
+tokio = { workspace = true, optional = true }
 ctor = { version = "0.2", optional = true }
 
 [features]
-default = ["user-hints"]
-user-hints = ["dep:zisk-common", "dep:bytes", "dep:paste", "dep:once_cell", "dep:ctor", "dep:anyhow", "dep:tokio"]
+default = []
+zisk_guest = []
+zisk_host = ["dep:zisk-common", "dep:bytes", "dep:paste", "dep:once_cell", "dep:ctor", "dep:anyhow", "dep:tokio"]
 
 [lints.rust]
 unexpected_cfgs = { level = "warn", check-cfg = [
