Gate host-only dependencies behind zisk_host feature for no_std guest builds
Host-only crates (num-bigint, num-traits, precompiles-helpers, fields,
sha2, lib-c) are now optional behind the zisk_host feature so they don't
get compiled for the bare-metal riscv64 guest target.

- Make 7 host-only deps optional in ziskos/entrypoint/Cargo.toml
- Gate fcalls_impl module behind #[cfg(not(feature = "zisk_guest"))]
- Configure serde as no_std (default-features = false at workspace level)
- Add use alloc::vec::Vec to files that need it in no_std mode
- Add #[macro_use] on extern crate alloc for vec!/format! macros
- Remove unused num_traits::ops::bytes import in bn254/curve.rs
- Add CI workflow to verify ziskos no_std guest compilation

--- a/sdk/Cargo.toml
+++ b/sdk/Cargo.toml
@@ -27,7 +27,7 @@ zisk-build = { workspace = true }
 zisk-witness = { workspace = true }
 sha2 = { workspace = true }
 bincode = { workspace = true, features = ["std"] }
-serde = { workspace = true }
+serde = { workspace = true, features = ["std"] }
 
 [features]
 default = []
