--- a/Cargo.toml
+++ b/Cargo.toml
@@ -142,7 +142,7 @@ ark-secp256r1 = "0.5"
 ark-bn254 = "0.5.0"
 ark-bls12-381 = "0.5.0"
 sysinfo = "0.38"
-serde = { version = "1.0", features = ["derive"] }
+serde = { version = "1.0", default-features = false, features = ["derive"] }
 serde_json = { version = "1.0", features = ["preserve_order"] }
 anyhow = "1.0"
 named-sem = "0.2.2"
