--- a/ziskos-hints/Cargo.toml
+++ b/ziskos-hints/Cargo.toml
@@ -23,12 +23,12 @@ num-traits = { workspace = true }
 
 precompiles-helpers = { workspace = true }
 
-lazy_static = "1.5.0"
+spin = "0.9"
 rand = "0.8.5"
 getrandom = { version = "0.2", features = ["custom"] }
 cfg-if = "1.0"
 tiny-keccak = { version = "2.0.0", features = ["keccak"] }
-serde = { workspace = true, features = ["derive"] }
+serde = { workspace = true, features = ["derive", "std"] }
 bincode = { workspace = true, features = ["std"] }
 paste = "1.0"
 sha2 = { workspace = true }
